<resources>
    <string name="app_name">Waffle</string>
    <string name="home">Skip The Contact</string>

    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintUserName">User Name</string>
    <string name="hintPhoneNumber">Phone Number:</string>
    <string name="btnAddCustomer">Add Customer</string>
    <string name="cust_page">Customer Information</string>
    <string name="num_in_the_queue"># in the queue</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Google_sign_in">GOOGLE Sign in</string>
    <string name="Sign_out">Sign out</string>
    <string name="Name">Name: </string>
    <string name="Phone">Phone: </string>
    <string name="Email_sign_in">EMAIL Sign in</string>
    <string name="title_activity_email_login">EmailLoginActivity</string>
    <string name="cust_name">Customer Name:</string>
    <string name="res_name">Restaurant:</string>
    <string name="arrive_time">Arrive at:</string>
    <string name="pick_time">PICK A TIME:</string>
    <string name="submit_form">SUBMIT</string>
    <string name="submit"> Submit</string>
    <string name="clickBtn"> Click</string>



</resources>