<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hintFirstName"
        android:autofillHints="@string/hintFirstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintLastName"
        android:autofillHints="@string/hintLastName"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUserName"
        android:autofillHints="@string/hintUserName"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPhoneNumber"
        android:autofillHints="@string/hintPhoneNumber"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonAddCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddCustomer" />

</LinearLayout>