<?xml version="1.0" encoding="utf-8"?>
    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:columnCount="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CustomerFormActivity">

    <TextView
        android:id="@+id/textViewFormTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_marginTop="@dimen/form_item_gap"
        android:textColor="@color/blk"
        android:layout_marginBottom="@dimen/form_item_gap"
        android:gravity="center_horizontal"
        android:text="@string/cust_page"
        android:textSize="@dimen/home_title_size" />

    <TextView
        android:id="@+id/textViewCusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:textColor="@color/blk"
        android:layout_marginStart="@dimen/tv_general_margin"
        android:layout_marginTop="@dimen/form_item_gap"
        android:layout_marginBottom="@dimen/form_item_gap"
        android:gravity="start"
        android:text="@string/cust_name"
        android:textSize="@dimen/form_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextTextCusName"
        android:layout_marginTop="@dimen/form_item_gap"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textViewPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blk"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginStart="@dimen/tv_general_margin"
        android:layout_marginTop="@dimen/form_item_gap"
        android:layout_marginBottom="@dimen/form_item_gap"
        android:gravity="start"
        android:text="@string/hintPhoneNumber"
        android:textSize="@dimen/form_font_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_marginTop="@dimen/form_item_gap"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:inputType="phone"
        android:text=""
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textViewRestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:textColor="@color/blk"
        android:layout_column="0"
        android:layout_marginStart="@dimen/tv_general_margin"
        android:layout_marginTop="@dimen/form_item_gap"
        android:layout_marginBottom="@dimen/form_item_gap"
        android:gravity="start"
        android:text="@string/res_name"
        android:textSize="@dimen/form_font_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginStart="@dimen/tv_general_margin"
        android:layout_marginTop="@dimen/form_item_gap"
        android:layout_marginBottom="@dimen/form_item_gap"
        android:text=""
        android:textAlignment="center"
        android:layout_columnWeight="2"
        android:textSize="@dimen/form_font_size"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/textViewPreferTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginStart="@dimen/tv_general_margin"
        android:layout_marginTop="@dimen/form_item_gap"
        android:layout_marginBottom="@dimen/form_item_gap"
        android:gravity="start"
        android:textColor="@color/blk"
        android:text="@string/arrive_time"
        android:textSize="@dimen/form_font_size"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_general_margin"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:text="@string/pick_time"
        android:layout_columnWeight="1"
        android:background="@color/btnColor"
        android:textColor="@color/textColor"/>

    <Button
        android:id="@+id/btnSubForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:background="@color/btnColor"
        android:textColor="@color/textColor"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />