<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="200px"
        android:layout_marginTop="100px"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="43dp"
        android:text="@string/cust_page"
        android:textSize="60px"
 />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="Name"
 />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="127dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:text="Phone Number"
 />

        <LinearLayout
            android:layout_width="242dp"
            android:layout_height="82dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="Waiting Time" />


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="115dp"
                android:layout_height="46dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginLeft="50px"
                android:text="Minutes" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="19dp"
        android:layout_marginTop="50px"
        android:text="@string/num_in_the_queue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="50px">
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/update_btn"
 />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="50px"
            android:layout_marginBottom="192dp"
            android:text="@string/delete_btn" />
    </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>